--- a/app/views/cart_items/_items.html.erb
+++ b/app/views/cart_items/_items.html.erb
@@ -34,4 +34,5 @@
     </div>
   </div>
 <% end %>
+<%  @cart.update(total_price: @cart.cart_total) %>
 <h3 class="Right">Total:<%=cart.total_price %></h3>
