--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,4 +1,5 @@
 <div class="container-fluid">
+  <p class="Back-Button"><%= link_to "Go Back Shopping", menu_categories_path %> </p>
   <div id="ui-view" data-select2-id="ui-view">
     <div>
       <div class="cardOrder">
