--- a/app/assets/stylesheets/menu.css
+++ b/app/assets/stylesheets/menu.css
@@ -1,5 +1,6 @@
 .MenuCategory-Title{
   margin: 20px;
+  margin-left: 0;
 }
 
 
@@ -212,4 +213,8 @@
     text-align: center;
     float: none;
   }
+}
+.pagination{
+  margin-top: 30px;
+
 }
