--- a/app/views/cart_items/edit.html.erb
+++ b/app/views/cart_items/edit.html.erb
@@ -1,34 +1,37 @@
-<div class="container">
+<div class="container mt-3">
   <% @cart=Cart.find(params[:id]) %>
   <% @cart_items=@cart.cart_items %>
+  <p class="Back-Button"><%= link_to "Go Back Shopping", menu_categories_path %> </p>
   <div >
     <%=render partial:"items", locals: {cart:@cart,cart_items:@cart_items }%>
   </div>
-  <%=form_with(url:orders_path(id:@cart.id) ,method:"post",class:"d-flex") do |form|%>
-    <div id="editmain">
-      <div class="inner_cont">
-        <div class="top_header">
-          <span class="header">Shipping address :</span><span class="edit_btn">edit</span>
-        </div>
-        <div class="detail_cnt">
-          <div class="address_detail">
-            <%=form.text_area :shipping_address,value:User.find(session[:current_user_id]).address,class:"Form-Input Address",placeholder:"Address"%>
+  <% if @cart.total_price > 0 %>
+    <%=form_with(url:orders_path(id:@cart.id) ,method:"post",class:"d-flex") do |form|%>
+      <div id="editmain">
+        <div class="inner_cont">
+          <div class="top_header">
+            <span class="header">Shipping address :</span><span class="edit_btn">edit</span>
+          </div>
+          <div class="detail_cnt">
+            <div class="address_detail">
+              <%=form.text_area :shipping_address,value:User.find(session[:current_user_id]).address,class:"Form-Input Address",placeholder:"Address"%>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="inner_cont">
-        <div class="top_header">
-          <span class="header">Billing address :</span><span class="edit_btn">edit</span>
-        </div>
-        <div class="detail_cnt">
-          <div class="address_detail">
-            <%=form.text_area :billing_address,value:User.find(session[:current_user_id]).address,class:"Form-Input Address",placeholder:"Address"%>
+        <div class="inner_cont">
+          <div class="top_header">
+            <span class="header">Billing address :</span><span class="edit_btn">edit</span>
+          </div>
+          <div class="detail_cnt">
+            <div class="address_detail">
+              <%=form.text_area :billing_address,value:User.find(session[:current_user_id]).address,class:"Form-Input Address",placeholder:"Address"%>
+            </div>
           </div>
         </div>
-      </div>
-      <div>
-        <%=form.submit "Place Order",class:"butn d-flex justify-content-end edit "%>
-      </div>
+        <div>
+          <%=form.submit "Place Order",class:"butn d-flex justify-content-end edit "%>
+        </div>
+      <% end %>
     <% end %>
   </div>
 </div>
