--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,6 @@
 <div class=" home " >
   <div class="container-fluidHome ">
-    <h1 class="display-2 " data-aos="fade-up" data-aos-duration="1000"
+    <h1 class="display-2  Title" data-aos="fade-up" data-aos-duration="1000"
                 data-aos-offset="0">Cafeteria Manager</h1>
     <p class="lead " data-aos="fade-up" data-aos-duration="1000"
                 data-aos-delay="600">One Stop for your hunger</p>
