Set new mail ID

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -18,6 +18,10 @@
             <td><b><%=@user.address %></b></td>
           </tr>
           <tr>
+            <td><b>Your Email Id:</b></td>
+            <td><b><%=@user.email %></b></td>
+          </tr>
+          <tr>
             <td><b>Your Phone Number:</b></td>
             <td><b><%=@user.phone_number %></b></td>
           </tr>
