Update the edit status

--- a/app/views/menu_categories/edit.html.erb
+++ b/app/views/menu_categories/edit.html.erb
@@ -15,7 +15,7 @@
       <div class="Form-Section">
         <div class="Form-Section-Label">
           <p>Status:</p>
-          <%[true,false].each do |status|%>
+          <%[!menu_category.status,menu_category.status].each do |status|%>
             <%= radio_button_tag "status",status,value:menu_category.status %>
             <%= label_tag " #{status}" %>
           <% end %>
